Shrink CLAUDE.md to what must be known before opening a file
CLAUDE.md had grown to 73,582 characters and was loaded in full on every
session, roughly 19k tokens spent before a single question was asked. Most
of it was deep reasoning about one subsystem, useful only to someone already
working in that subsystem.

Move that reasoning into eight documents under .claude/context/, delivered
on demand by the PreToolUse router rather than up front, and leave behind
the orientation a session genuinely needs cold: the stack, the build
commands, the tree, the two request paths, and the map of where the rest
lives.

The cross-cutting section keeps only facts the router cannot deliver in
time — where the mistake happens in a file no route covers. The citation
header qualifies, since the document owning it is keyed to the chat path
while the mistake gets made in export or migration code. Ollama's single
embedding slot does not: it is already stated in ingestion.md, in
api-and-errors.md, and in an always-loaded pinned memory, so a fourth copy
here bought nothing and cost the budget this change exists to reclaim.

Content dropped rather than moved: restatements of things memory already
owns, and the llama3.2 eviction narrative, which had been annotated as no
longer describing the configuration. Endpoint tables stay in README, which
is canonical for them.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>